--- a/index.html
+++ b/index.html
@@ -1,26 +1,19 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Board Game</title>
-    <link rel='stylesheet' href='style.css' />
+    <title>Board Game Starter</title>
+    <link rel='stylesheet' href='style2.css' />
   </head>
   <body>
-    <br /><br /><br /><br />
-    <div class='dieholder'>
-      <img src='Dodecahedron_360.png' id='die'/>
-      <h1 id='dieroll'></h1>
+    <h1>Super Skillful Board Game</h1>
+    <h2>Nothing But Pure Skill</h2>
+    <div id='player1'></div>
+    <div id='player2'></div>
+    <div id='die-container'>
+      <img src='dodecahedron_360.png' id='die'/>
+      <h1 id='roll'>1</h1>
     </div>
-
-    <script src="https://code.jquery.com/jquery-3.1.0.min.js" integrity="sha256-cCueBR6CsyA4/9szpPfrX3s49M9vUU5BgtiJj06wt/s=" crossorigin="anonymous"></script>
-    <script>
-      $('#die').click(function(){
-        $('#dieroll').html('');
-        $(this).attr('src', 'Dodecahedron.gif');
-        setTimeout(function(){
-          $('#die').attr('src', 'Dodecahedron_360.png');
-          $('#dieroll').html(Math.floor(Math.random()*12)+1 );
-        }, 3100);
-      });
-    </script>
+    <div id='board-container'></div>
+    <script src='js/prod.js'></script>
   </body>
 </html>
